buildmaster: Fix naming collision in Gerrit code
Not that easy to copy whole modules around...

Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/master.cfg
+++ b/buildbot-host/buildmaster/master.cfg
@@ -27,8 +27,6 @@ from buildbot.reporters.message import MessageFormatterRenderable
 from buildbot.util import httpclientservice
 from buildbot.util.ssfilter import SourceStampFilter
 
-log = Logger()
-
 ############################################################################
 ### Copy of Gerrit code from buildbot 3.11.x since 4.x version is broken ###
 ### cf. https://github.com/buildbot/buildbot/issues/8711                 ###
@@ -53,8 +51,6 @@ import copy
 import datetime
 import json
 
-from twisted.internet import defer
-from twisted.internet import reactor
 from twisted.python import log
 
 from buildbot import config
@@ -422,6 +418,8 @@ class OurGerritEventLogPoller(OurGerritChangeSourceBase):
 
 ### End of Copy ###
 
+logger = Logger()
+
 
 class GerritChecks(ReporterBase):
     name = "GerritChecks"
@@ -493,7 +491,7 @@ class GerritChecks(ReporterBase):
             payload["url"] = url
 
         if self._verbose:
-            log.debug(
+            logger.debug(
                 "Sending Gerrit status for {change_id}/{revision_id}: data={data}",
                 change_id=change_id,
                 revision_id=revision_id,
@@ -550,7 +548,7 @@ class GerritChecks(ReporterBase):
                     url=build["url"],
                 )
             except Exception:
-                log.failure("Failed to send status!", failure=failure.Failure())
+                logger.failure("Failed to send status!", failure=failure.Failure())
 
 
 def get_worker_setting(config, worker_name, setting):
