buildmaster: Add some parts of contrib/ to build regex
These are used by Windows builds.

Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/master.cfg
+++ b/buildbot-host/buildmaster/master.cfg
@@ -1462,6 +1462,8 @@ openvpn_file_patterns = [
     "m4/.*",
     "src/.*",
     "tests/.*",
+    "contrib/cmake/.*",
+    "contrib/vcpkg-.*",
     "distro/dns-scripts/.*",
     "sample/sample-keys/.*",
     "sample/sample-config-files/loopback-.*",
@@ -1472,7 +1474,6 @@ openvpn_file_patterns = [
     ".*CMakeLists.txt",
     "version.m4",
     ".*\.rst",
-    "doc/Makefile.am",
 ]
 
 openvpn_filter_fn = "^(" + "|".join(openvpn_file_patterns) + ")$"
