buildmaster/openvpn: Make builds parallel
Since the actual build is so small and instead
much of the time is spent in steps like
autoconf/configure/tests that are not CPU-bound.
So parallelizing the code steps is possible
even on shared resources like the docker workers.

For the t_client step the -j2 makes a big difference
since the two minute t_cltsrv.sh can be run in
parallel to t_client.sh.

Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/openvpn/check_steps.cfg
+++ b/buildbot-host/buildmaster/openvpn/check_steps.cfg
@@ -7,7 +7,7 @@ def openvpnAddCheckStepsToBuildFactory(factory, combo, shell_env=None):
     # Run the tests, including t_client.sh and t_server_null.sh
     factory.addStep(
         steps.ShellCommand(
-            command=["make", "check", "VERBOSE=1"],
+            command=["make", "-j", "2", "check", "VERBOSE=1"],
             env=shell_env,
             name="run tests",
             description="testing",
