--- a/buildbot-host/buildmaster/openvpn/unix_compile_steps.cfg
+++ b/buildbot-host/buildmaster/openvpn/unix_compile_steps.cfg
@@ -6,7 +6,7 @@ def openvpnAddUnixCompileStepsToBuildFactory(factory, combo, shell_env=None):
 
     factory.addStep(
         steps.ShellCommand(
-            command=["make"],
+            command=["make", "-j", "4"],
             name="compile",
             description="compiling",
             descriptionDone="compiling",
