--- a/buildbot-host/buildmaster/openvpn/unix_unit-test_steps.cfg
+++ b/buildbot-host/buildmaster/openvpn/unix_unit-test_steps.cfg
@@ -6,7 +6,7 @@ def openvpnAddUnixUnitTestStepsToBuildFactory(factory, combo, shell_env=None):
 
     factory.addStep(
         steps.ShellCommand(
-            command=["make", "-C", "tests/unit_tests", "check", "VERBOSE=1"],
+            command=["make", "-C", "tests/unit_tests", "-j", "4", "check", "VERBOSE=1"],
             name="testing",
             description="running unit-tests",
             descriptionDone="running unit-tests",
