buildmaster: Increase buildbot caches
Some of them are by default configured for
pretty small setups. So increase them to
more sensible numbers.

Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/master.cfg
+++ b/buildbot-host/buildmaster/master.cfg
@@ -1762,3 +1762,14 @@ c["configurators"] = [
         hour=3,
     )
 ]
+# https://buildbot.readthedocs.io/en/latest/manual/configuration/global.html#data-lifetime
+c["caches"] = {
+    "Changes": 100,
+    "Builds": 500,
+    "chdicts": 500,
+    "BuildRequests": 500,
+    "SourceStamps": 500,
+    "ssdicts": 500,
+    "objectids": 10,
+    "usdicts": 10,
+}
