buildmaster: Allow us to configure whether a worker uses ccache
This avoids the spurious warnings that are sometimes
confusing. Instead the steps will be marked as "skipped".

Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/master.cfg
+++ b/buildbot-host/buildmaster/master.cfg
@@ -1379,6 +1379,9 @@ for factory_name, factory in factories.items():
         if o.startswith("--"):
             properties["openvpn3_linux_extra_config_opts"] = o.split(" ")
 
+        if worker_config.get(worker_name, f"use_ccache") == "true":
+            properties["use_ccache"] = True
+
         cp = json.loads(worker_config.get(worker_name, "openvpn3_linux_command_prefix"))
         properties["openvpn3_linux_command_prefix"] = cp
 
