--- a/buildbot-host/buildmaster/openvpn/check_steps.cfg
+++ b/buildbot-host/buildmaster/openvpn/check_steps.cfg
@@ -20,10 +20,11 @@ def openvpnAddCheckStepsToBuildFactory(factory, combo, shell_env=None):
         steps.ShellCommand(
             command="ccache -s",
             decodeRC={0: SUCCESS, 127: WARNINGS},
-            name="ccache show",
+            name="ccache show (make check)",
             description="showing stats",
-            descriptionDone="showing stats",
+            descriptionDone="ccache stats",
             env=shell_env,
+            doStepIf=lambda s: s.getProperty("use_ccache", False),
         )
     )
 
