--- a/buildbot-host/buildmaster/openvpn/cmake_unix_steps.cfg
+++ b/buildbot-host/buildmaster/openvpn/cmake_unix_steps.cfg
@@ -20,8 +20,9 @@ def openvpnAddCmakeUnixStepsToBuildFactory(factory, shell_env=None):
             name="ccache reset",
             decodeRC={0: SUCCESS, 127: WARNINGS},
             description="resetting stats",
-            descriptionDone="resetting stats",
+            descriptionDone="stats reset",
             env=shell_env,
+            doStepIf=lambda s: s.getProperty("use_ccache", False),
         )
     )
 
@@ -70,10 +71,11 @@ def openvpnAddCmakeUnixStepsToBuildFactory(factory, shell_env=None):
         steps.ShellCommand(
             command="ccache -s",
             decodeRC={0: SUCCESS, 127: WARNINGS},
-            name="ccache show",
+            name="ccache show (cmake build)",
             description="showing stats",
-            descriptionDone="showing stats",
+            descriptionDone="ccache stats",
             env=shell_env,
+            doStepIf=lambda s: s.getProperty("use_ccache", False),
         )
     )
 
