--- a/buildbot-host/buildmaster/openvpn/common_mingw_steps.cfg
+++ b/buildbot-host/buildmaster/openvpn/common_mingw_steps.cfg
@@ -22,6 +22,7 @@ def openvpnAddCommonMingwStepsToBuildFactory(factory, shell_env=None):
             description="resetting stats",
             descriptionDone="resetting stats",
             env=shell_env,
+            doStepIf=lambda s: s.getProperty("use_ccache", False),
         )
     )
 
