--- a/buildbot-host/buildmaster/openvpn3-linux/gdbuspp_steps.cfg
+++ b/buildbot-host/buildmaster/openvpn3-linux/gdbuspp_steps.cfg
@@ -21,6 +21,7 @@ def openvpn3LinuxAddGdbusppStepsToBuildFactory(factory, shell_env):
             description="resetting stats",
             descriptionDone="reset stats",
             env=shell_env,
+            doStepIf=lambda s: s.getProperty("use_ccache", False),
         )
     )
 
@@ -81,6 +82,7 @@ def openvpn3LinuxAddGdbusppStepsToBuildFactory(factory, shell_env):
             description="showing stats",
             descriptionDone="show stats",
             env=shell_env,
+            doStepIf=lambda s: s.getProperty("use_ccache", False),
         )
     )
 
