--- a/buildbot-host/buildmaster/worker-default.ini
+++ b/buildbot-host/buildmaster/worker-default.ini
@@ -7,6 +7,8 @@ password=vagrant
 master_fqdn=172.18.0.1
 docker_url=tcp://172.18.0.1:2375
 
+use_ccache=false
+
 # Build types
 enable_debian_builds=true
 enable_msbuild_builds=false
