--- a/buildbot-host/buildmaster/openvpn/common_unix_steps.cfg
+++ b/buildbot-host/buildmaster/openvpn/common_unix_steps.cfg
@@ -20,8 +20,9 @@ def openvpnAddCommonUnixStepsToBuildFactory(factory, combo, shell_env=None):
             name="ccache reset",
             decodeRC={0: SUCCESS, 127: WARNINGS},
             description="resetting stats",
-            descriptionDone="resetting stats",
+            descriptionDone="stats reset",
             env=shell_env,
+            doStepIf=lambda s: s.getProperty("use_ccache", False),
         )
     )
 
