--- a/buildbot-host/buildmaster/openvpn3-linux/common_linux_steps.cfg
+++ b/buildbot-host/buildmaster/openvpn3-linux/common_linux_steps.cfg
@@ -19,6 +19,7 @@ def openvpn3LinuxAddCommonLinuxStepsToBuildFactory(factory, shell_env):
             description="resetting stats",
             descriptionDone="reset stats",
             env=shell_env,
+            doStepIf=lambda s: s.getProperty("use_ccache", False),
         )
     )
 
@@ -70,6 +71,7 @@ def openvpn3LinuxAddCommonLinuxStepsToBuildFactory(factory, shell_env):
             description="showing stats",
             descriptionDone="show stats",
             env=shell_env,
+            doStepIf=lambda s: s.getProperty("use_ccache", False),
         )
     )
 
