--- a/buildbot-host/buildmaster/openvpn/tclient_pre_steps.cfg
+++ b/buildbot-host/buildmaster/openvpn/tclient_pre_steps.cfg
@@ -5,39 +5,29 @@ def openvpnAddTClientPreStepsToBuildFactory(factory, combo, shell_env=None):
         shell_env = {}
 
     factory.addStep(
-        steps.ShellCommand(
-            command=["cp", "-f", "/buildbot/t_client.rc", "."],
-            name="copy t_client.rc",
-            description="copying",
-            descriptionDone="copying",
-        )
-    )
-
-    # The tclient.sh script populates the t_client_ips.rc file automatically.
-    # This step ensure that we have at least an empty t_client_ips.rc file
-    # available for t_client.sh.
-    factory.addStep(
-        steps.ShellCommand(
-            command=["touch", "t_client_ips.rc"],
-            name="touch t_client_ips.rc",
-            description="touching",
-            descriptionDone="touching",
-        )
-    )
-
-    # These steps restore a cached t_client_ips.rc, if any. On the first run it won't exist.
-    factory.addStep(
-        steps.ShellCommand(
-            command=[
-                "cp",
-                "-f",
-                util.Interpolate("%(prop:persist)s/t_client_ips.rc"),
-                ".",
+        steps.ShellSequence(
+            commands=[
+                util.ShellArg(
+                    command=["cp", "-f", "/buildbot/t_client.rc", "."],
+                    logname="copy t_client.rc",
+                ),
+                # The tclient.sh script populates the t_client_ips.rc file automatically.
+                # This step ensure that we have at least an empty t_client_ips.rc file
+                # available for t_client.sh.
+                util.ShellArg(
+                    command=["touch", "t_client_ips.rc"],
+                    logname="touch t_client_ips.rc",
+                ),
+                util.ShellArg(
+                    command=util.Interpolate(
+                        "cp -f %(prop:persist)s/t_client_ips.rc . || true"
+                    ),
+                    logname="restore t_client_ips.rc",
+                ),
             ],
-            name="restore t_client_ips.rc",
-            decodeRC={0: SUCCESS, 1: SUCCESS},
-            description="restoring",
-            descriptionDone="restoring",
+            name="prepare t_client config",
+            description="preparing",
+            descriptionDone="t_client config",
         )
     )
 
