--- a/buildbot-host/buildmaster/worker-default.ini
+++ b/buildbot-host/buildmaster/worker-default.ini
@@ -37,6 +37,17 @@ openvpn_extra_config_opts=
 openvpn3_linux_extra_config_opts=
 openvpn3_linux_command_prefix=["/bin/sh", "-c"]
 
+# For OpenSSL 1.0.2 testing for release/2.6
+[debian-9]
+image=openvpn_community/buildbot-worker-debian-9:v1.0.0
+enable_openvpn_main_builds=false
+enable_cmake_builds=false
+enable_mbedtls_builds=false
+enable_ovpn-dco_builds=false
+enable_openvpn3_builds=false
+enable_openvpn3-linux_builds=false
+openvpn_extra_config_opts=--disable-dco
+
 [debian-11]
 image=openvpn_community/buildbot-worker-debian-11:v1.0.3
 # mbedTLS too old for EKM
