buildbot-worker-opensuse-leap-15: Downgrade to buildbot-worker 3.11.9
Leap 15 has Python 3.6 by default. This is not compatible with
buildbot-worker 4.3.0.

Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/snippets/Dockerfile.common
+++ b/buildbot-host/snippets/Dockerfile.common
@@ -19,6 +19,7 @@ RUN set -ex; \
 
 # Install buildbot
 ARG MY_NAME
+ARG BUILDBOT_VERSION
 COPY scripts/install-lwipovpn.sh scripts/install-buildbot.sh t_client/*.crt t_client/*.rc t_client/*.txt ${MY_NAME}/t_client.* ${MY_NAME}/t_server_null.rc /buildbot/
 RUN set -ex; \
     /buildbot/install-buildbot.sh; \
